[css-grid] Allow alignment of in-flow items with non-static positions

This is a fix for a regression introduced in r515391, where we landed
the implementation of alignment for positioned objects in a Grid Layout
container.

We assumed that items with non-static positions shouldn't honor the
CSS Box Alignment properties. This is only true for out-of-flow items,
absolute or fixed positioned elements. However, sticky positioned
elements are treated as relative positioned items, but they indeed use
non-static position to define their behavior.

Bug: 806622
Change-Id: Ibaed2c36530d81223d1491def9022e82cf9c3525
Reviewed-on: https://chromium-review.googlesource.com/897949
Commit-Queue: Javier Fernandez <jfernandez@igalia.com>
Reviewed-by: Manuel Rego Casasnovas <rego@igalia.com>
Reviewed-by: Christian Biesinger <cbiesinger@chromium.org>
Cr-Commit-Position: refs/heads/master@{#534029}
Former-commit-id: a123787c6df637b7e7b33fef67e15a587978110f